--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,7 +1,7 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
-#### [ 缺席二十大？王岐山12日出访哈萨克(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018900.md)
 #### [ 大局已定 七中全会公报强调“习核心”治绩斐然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018939.md)
+#### [ 缺席二十大？王岐山12日出访哈萨克(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018900.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 影射赵乐际？二十大前专题片点名涉秦岭别墅案官员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018848.md)
 #### [ 二十大关乎班子、旗帜、道路“三定”之会 (图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018749.md)
@@ -33,8 +33,8 @@
 #### [ 【晚间新闻】二十大倒计时 北京风声鹤唳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843305.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 北京四通桥有人放喇叭挂横幅 “要吃饭要自由要选票”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018992.md)
-#### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661320.md)
 #### [ 二十大前北京市区现抗议标语 照片和视频热传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550320.md)
+#### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661320.md)
 #### [ 专家：中国经济畸形发展 下坠速度让世界吃惊](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843202.md)
 #### [ 谁将接替李克强？日本专家：胡春华有机会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844060.md)
 #### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843166.md)
@@ -44,10 +44,10 @@
 #### [ 【新闻看点】七中确立两核心 新常委四老三新？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844084.md)
 #### [ 二十大前党媒为中共清零背书 评论区一片骂声 微博急降热搜](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661401.md)
 #### [ 七中全会公报 高调吹捧习近平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549523.md)
+#### [ 王永康落选中央委员 传犯习近平大忌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549998.md)
 #### [ 【热门话题】中共政治局常委“四老三新”版本/上海水荒来了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549433.md)
 #### [ 习近平握紧“刀把子” 二十大政法委书记人选浮出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549394.md)
 #### [ 反习派未有大动作？矢板明夫：习有3颗“定时炸弹”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549684.md)
-#### [ 王永康落选中央委员 传犯习近平大忌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549998.md)
 #### [ 中共卫健委称整治层层加码 评论区翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844481.md)
 #### [ 美权威教授：20大后习如何指挥经济团队](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843341.md)
-#### [ 【一线采访】汕尾发生恶性砍人案 或报复社会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843023.md)
+#### [ 中共20大──从渐进衰败到终极崩溃(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018889.md)
